edcbaf8c21823e715c199af56c9a6111af2fda8e fix: Reduce spacing when no title is set
Jira Issue CT-1321

Sync to source repo @edcbaf8c21823e715c199af56c9a6111af2fda8e

--- a/css/searchBuilder.jqueryui.css
+++ b/css/searchBuilder.jqueryui.css
@@ -34,6 +34,9 @@ div.dtsb-searchBuilder div.dtsb-titleRow div.dtsb-title {
   display: inline-block;
   padding-top: 6px;
 }
+div.dtsb-searchBuilder div.dtsb-titleRow div.dtsb-title:empty {
+  display: inline;
+}
 div.dtsb-searchBuilder div.dtsb-titleRow button.dtsb-clearAll {
   float: right;
   margin-bottom: 0.333em;
